# rollup-plugin-purs

./: .gitignore  .gitmodules  .npmignore  Cargo.toml  README.md  index.js  inline.js  package.json  psc-package.json  webpack.config.js
bak/: convert.js  dead-code.js  propagate.js  remove-iife.js  uncurry.js
examples/pulp init/: .gitignore  bower.json  package.json  rollup.config.js
examples/tab-organizer/: .gitignore  README.md  bower.json  package.json  purs-loader.js  rollup.config.js  webpack.config.js
examples/tab-organizer/src/: Main.purs  Prelude.purs
js/: convert-commonjs.js  index.js
lib/parser/: Cargo.toml
lib/parser/src/: ast.rs  combinators.rs  lib.rs  stream.rs  token.rs
output/Bar/: index.js
output/Foo/: index.js
output/Main/: index.js
src/: convert.js  convert.rs  dead-code.js  expression.js  inline-accessors.js  inline.js  lib.rs  match.js  optimize.rs  parser.rs  propagate.js  remove-iife.js  remove-sequence.js  rename.js  scope.js  split-vars.js  ssa.js  typeclass.js  uncurry.js  util.js  walk.js
src/parser/: ast.rs  stream.rs  types.rs
test/: bar.js  bundle.js  foo.js  rollup.config.js
test/output/11/: foreign.js  index.js
test/output/Bar/: index.js
test/output/Control.Apply/: index.js
test/output/Control.Semigroupoid/: index.js
test/output/Corge/: index.js
test/output/Data.Functor/: index.js
test/output/Data.Maybe/: index.js
test/output/Data.Semiring/: foreign.js  index.js
unittest/: dead-code.js  inline-accessors.js  inline.js  propagate.js  remove-iife.js  typeclass-full.js  typeclass.js  uncurry.js
(+34 files in other folders)
